--- a/wisim/src/build.xml
+++ b/wisim/src/build.xml
@@ -24,8 +24,8 @@
 
 
   <project basedir="." default="execution" name="WiSim">
-  <property name="root" value="d:/Entwicklung/Java/wisim_sourceforge" />
-  <property name="temp" value="D:/Temp" />
+  <property name="root" value="e:/Eigene Dateien/Entwicklung/Java/wisim" />
+  <property name="temp" value="e:/Temp" />
   <property name="src" value="${root}/src/java/" />
   <property name="build" value="${temp}/build" />
   <property name="deploy" value="${temp}/deploy" />
@@ -67,5 +67,10 @@
   <target name="clean">
     <delete dir="${build}" />
     <delete dir="${deploy}" />
+  </target>
+  
+  <target name="image_jar">
+    <jar jarfile="${deploy}/src.jar" basedir="e:/temp/icons"/>
+    <copy file="${deploy}/src.jar" todir="${root}/libs" overwrite="yes" />
   </target>
 </project>
