--- a/wisim/src/build.xml
+++ b/wisim/src/build.xml
@@ -49,7 +49,7 @@
      </copy>
   </target>
   
-  <target name="compile" depends="init">
+  <target name="compile" depends="res">
     <javac destdir="${classes}/" srcdir="${src}" classpath="${libs}" />
   </target>
   
@@ -77,7 +77,7 @@
     <delete dir="${res}"/>
   </target>
   
-  <target name="res">
+  <target name="res" depends="init">
   	<mkdir dir="${res}" />
   	<mkdir dir="${res}/icons" />
   	<mkdir dir="${res}/sql" />
